# SDKv2.Android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle  versions.gradle
JniBrainBox/: .gitignore  CMakeLists.txt  build.gradle
JniBrainBox/JNI/: JniCalibration.cpp  JniQualityChecker.cpp  JniRelaxIndex.cpp  JniUtils.cpp  JniUtils.hpp  com_mybraintech_android_jnibrainbox_Calibration.h  com_mybraintech_android_jnibrainbox_QualityChecker.h  com_mybraintech_android_jnibrainbox_RelaxIndex.h
JniBrainBox/header/BrainBox/: Calibration.hpp  Classifier.hpp  Display.hpp  FFT.hpp  Global.hpp  IAF.hpp  Math.hpp  Matrix.hpp  PWelch.hpp  QualityChecker.hpp  RelaxIndex.hpp  Settings.hpp  SignalProcessing.hpp  TrainingData.hpp  Version.hpp
JniBrainBox/src/main/: AndroidManifest.xml
JniBrainBox/statistic/MBT_Statistic/: MBT_JNI_ComputeStatistics.cpp  MBT_JNI_ComputeStatistics.h  modules_signalprocessing_MBTSignalComputeStatistics.h
JniBrainBox/statistic/SDK/include/MyBrainTechSDK/SNR/: MBT_SNR_Stats.h
JniBrainBox/statistic/SDK/include/SignalProcessing/: sp-config.h  sp-global.h
JniBrainBox/statistic/SDK/include/SignalProcessing/Algebra/: MBT_FindClosest.h  MBT_Interpolation.h  MBT_Operations.h  MBT_kmeans.h
JniBrainBox/statistic/SDK/include/SignalProcessing/DataManipulation/: MBT_Matrix.h  MBT_ReadInputOrWriteOutput.h  Utils.h
JniBrainBox/statistic/SDK/include/SignalProcessing/PreProcessing/: MBT_BandPass_fftw3.h  MBT_PreProcessing.h
JniBrainBox/statistic/SDK/include/SignalProcessing/Transformations/: MBT_FindPeak.h  MBT_Fourier_fftw3.h  MBT_PWelchComputer.h
JniBrainBox/statistic/SDK/lib/arm64-v8a/cmake/MyBrainTechSDK/: libMyBrainTechSDKTargets-release.cmake  libMyBrainTechSDKTargets.cmake
JniBrainBox/statistic/SDK/lib/arm64-v8a/cmake/SignalProcessing/: libSignalProcessingTargets-release.cmake
JniBrainBox/statistic/SDK/lib/arm64-v8a/cmake/fftw3/: FFTW3Config.cmake  FFTW3LibraryDepends-release.cmake
JniBrainBox/statistic/SDK/lib/arm64-v8a/pkgconfig/: fftw.pc
JniBrainBox/statistic/SDK/lib/armeabi-v7a/cmake/MyBrainTechSDK/: libMyBrainTechSDKConfig.cmake  libMyBrainTechSDKTargets-release.cmake  libMyBrainTechSDKTargets.cmake
JniBrainBox/statistic/SDK/lib/armeabi-v7a/cmake/SignalProcessing/: libSignalProcessingTargets-release.cmake
JniBrainBox/statistic/SDK/lib/armeabi-v7a/cmake/fftw3/: FFTW3Config.cmake  FFTW3LibraryDepends-release.cmake
JniBrainBox/statistic/SDK/lib/armeabi-v7a/pkgconfig/: fftw.pc
JniBrainBox/statistic/SDK/lib/x86/cmake/MyBrainTechSDK/: libMyBrainTechSDKTargets-release.cmake  libMyBrainTechSDKVersion.cmake
JniBrainBox/statistic/SDK/lib/x86/cmake/SignalProcessing/: libSignalProcessingTargets-release.cmake  libSignalProcessingTargets.cmake
JniBrainBox/statistic/SDK/lib/x86/pkgconfig/: fftw.pc
JniBrainBox/statistic/SDK/lib/x86_64/pkgconfig/: fftw.pc
(+2737 files in other folders)
